netcdf-derive/tests/failing/noreprc.rs
#[derive(netcdf_derive::NcType)]
struct NoReprC {
    a: u8,
}

fn main() {}
